[gd_scene load_steps=6 format=3 uid="uid://cdwsg1lhk2eca"]

[ext_resource type="Texture2D" uid="uid://exgd3lrbbvg5" path="res://MENU/ASSETS/INGREDIENTS/Boeuf.png" id="1_ipejd"]
[ext_resource type="Script" uid="uid://dvsby4x2akrqj" path="res://MENU/SCRIPTS/ingredient.gd" id="1_sjnoy"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_txdy6"]
friction = 0.2
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sjnoy"]
radius = 172.627

[sub_resource type="CircleShape2D" id="CircleShape2D_txdy6"]
radius = 172.142

[node name="Ingredient" type="RigidBody2D"]
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_txdy6")
can_sleep = false
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("1_sjnoy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sjnoy")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("1_ipejd")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.00001, -11.5)
scale = Vector2(13.3, 15.45)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_txdy6")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
